[NEW] XML comparator

--- a/TestExecutorBs/src/main/resources/application.properties
+++ b/TestExecutorBs/src/main/resources/application.properties
@@ -3,3 +3,5 @@ httpclient.readtimeout=3
 kafka.enabled=true
 kafka.broker=0.0.0.0:9092
 kafka.topic=T_GES_DOCU
+comparison.verbose=true
+comparison.ignoreSpaces=false
