--- a/TestExecutorBs/pom.xml
+++ b/TestExecutorBs/pom.xml
@@ -20,6 +20,17 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.xmlunit</groupId>
+            <artifactId>xmlunit-core</artifactId>
+            <version>2.8.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.xmlunit</groupId>
+            <artifactId>xmlunit-matchers</artifactId>
+            <version>2.8.2</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.jooq</groupId>
             <artifactId>jool</artifactId>
             <version>0.9.1</version>
