--- a/TestExecutorBs/src/main/resources/application.properties
+++ b/TestExecutorBs/src/main/resources/application.properties
@@ -5,3 +5,12 @@ kafka.broker=0.0.0.0:9092
 kafka.topic=T_GES_DOCU
 comparison.verbose=true
 comparison.ignoreSpaces=false
+spring.datasource.type=com.zaxxer.hikari.HikariDataSource
+db.driver=com.ibm.db2.jcc.DB2SimpleDataSource
+db.databaseName=FINDO
+db.portNumber=50000
+db.url=0.0.0.0
+db.username=db2inst1
+db.password=admin
+db.testQuery=SELECT 1 FROM DB2INST1.TEST_CASES
+spring.batch.initialize-schema=always
