--- a/.gitignore
+++ b/.gitignore
@@ -145,3 +145,5 @@ buildNumber.properties
 .flattened-pom.xml
 
 # End of https://www.toptal.com/developers/gitignore/api/intellij,java,maven
+/OUTPUT_FILE/
+/INPUT_FILE/
