--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,11 @@
         <relativePath/>
     </parent>
 
+    <modules>
+        <module>TestExecutorBs</module>
+        <module>ExecutorBatch</module>
+    </modules>
+
     <groupId>com.reply</groupId>
     <artifactId>TestExecutor</artifactId>
     <version>1.0-SNAPSHOT</version>
