[NEW] added configuration to test a specific service

--- a/ExecutorBatch/src/main/resources/application.properties
+++ b/ExecutorBatch/src/main/resources/application.properties
@@ -3,8 +3,10 @@ services.endpoints={\
       'http://localhost:8080/ws', \
       'http://localhost:8080/ws'}\
       }
+services.name=GKDOCPRA
 file.input=../INPUT_FILE/test_cases.txt
 file.output=../OUTPUT_FILE/
+
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 db.driver=com.ibm.db2.jcc.DB2SimpleDataSource
 db.databaseName=FINDO
