[NEW] support for kafka json messages v2

--- a/TestExecutorBs/src/main/resources/application.properties
+++ b/TestExecutorBs/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 httpclient.sockettimeout=5
 httpclient.readtimeout=3
 kafka.enabled=true
+kafka.format=0
 kafka.broker=0.0.0.0:9092
-kafka.topic=T_GES_DOCU
+kafka.topic=TABLE_WRITES
 comparison.verbose=true
 comparison.ignoreSpaces=false
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
