--- a/ExecutorBatch/pom.xml
+++ b/ExecutorBatch/pom.xml
@@ -20,7 +20,7 @@
     <dependencies>
         <dependency>
             <groupId>com.reply</groupId>
-            <artifactId>TestExecutorBs</artifactId>
+            <artifactId>TestExecutorCore</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
