--- a/ExecutorBatch/src/main/resources/application.properties
+++ b/ExecutorBatch/src/main/resources/application.properties
@@ -3,16 +3,21 @@ services.endpoints={\
       'http://localhost:8080/ws', \
       'http://localhost:8080/ws'}\
       }
-services.name=GKDOCPRA
+#services.name=GKDOCPRA
 file.input=../INPUT_FILE/test_cases.txt
 file.output=../OUTPUT_FILE/
 
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
-db.driver=com.ibm.db2.jcc.DB2SimpleDataSource
-db.databaseName=FINDO
-db.portNumber=50000
-db.url=0.0.0.0
-db.username=db2inst1
-db.password=admin
-db.testQuery=SELECT 1 FROM DB2INST1.TEST_CASES
 spring.batch.initialize-schema=always
+
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=password
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+spring.datasource.url=jdbc:db2://0.0.0.0:50000/FINDO
+spring.datasource.driverClassName=com.ibm.db2.jcc.DB2Driver
+spring.datasource.username=db2inst1
+spring.datasource.password=admin
+#spring.jpa.database-platform=org.hibernate.dialect.DB2Dialect
